samples/_failures_safe/1761073851_a32c97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ede39e18.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_ede39e18.c:186: error: expected ‘{’ at end of input
